Fix css spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -197,7 +197,7 @@ footer {
 		top: auto;
 		margin: 5px 20px;
 		padding: 0px;
-		-webkit-mask-image:;
-		mask-image:;
+		-webkit-mask-image: none;
+		mask-image: none;
 		}
 	}
